--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clonedisneyplus",
+  "name": "clone_disneyplus",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,16 +8,22 @@
     "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ogiansouza/clone_disneyplus.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ogiansouza/clone_disneyplus/issues"
+  },
+  "homepage": "https://github.com/ogiansouza/clone_disneyplus#readme",
   "devDependencies": {
-    "gulp": "^5.0.0",
+    "gulp": "^4.0.2",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.75.0"
-  },
-  "dependencies": {
-    "gulp-cli": "^3.0.0"
+    "gulp-uglify": "^3.0.2",
+    "sass": "^1.56.1"
   }
 }
